org/chw/proto/ExprParser.java
// $ANTLR 3.4 E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g 2013-01-20 08:58:03

package org.chw.proto;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class ExprParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Attribute", "BraceL", "BraceR", "BracketL", "BracketR", "ClassPath", "Comment", "Default", "DefaultValue", "Dot", "Enum", "EnumList", "Equals", "Identity", "Import", "ImportList", "Index", "Message", "MessageList", "Name", "Number", "Option", "OptionList", "Other", "Package", "PackageList", "Proto", "Quotation", "Semicolon", "Space", "Type"
    };

    public static final int EOF=-1;
    public static final int Attribute=4;
    public static final int BraceL=5;
    public static final int BraceR=6;
    public static final int BracketL=7;
    public static final int BracketR=8;
    public static final int ClassPath=9;
    public static final int Comment=10;
    public static final int Default=11;
    public static final int DefaultValue=12;
    public static final int Dot=13;
    public static final int Enum=14;
    public static final int EnumList=15;
    public static final int Equals=16;
    public static final int Identity=17;
    public static final int Import=18;
    public static final int ImportList=19;
    public static final int Index=20;
    public static final int Message=21;
    public static final int MessageList=22;
    public static final int Name=23;
    public static final int Number=24;
    public static final int Option=25;
    public static final int OptionList=26;
    public static final int Other=27;
    public static final int Package=28;
    public static final int PackageList=29;
    public static final int Proto=30;
    public static final int Quotation=31;
    public static final int Semicolon=32;
    public static final int Space=33;
    public static final int Type=34;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public ExprParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ExprParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return ExprParser.tokenNames; }
    public String getGrammarFileName() { return "E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g"; }


    public static class proto_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "proto"
    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:40:1: proto : ( packageDef | optionDef | importDef | messageDef | enumDef | Comment )* -> ^( Proto ^( PackageList ( packageDef )* ) ^( OptionList ( optionDef )* ) ^( ImportList ( importDef )* ) ^( MessageList ( messageDef )* ) ^( EnumList ( enumDef )* ) ) ;
    public final ExprParser.proto_return proto() throws RecognitionException {
        ExprParser.proto_return retval = new ExprParser.proto_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token Comment6=null;
        ExprParser.packageDef_return packageDef1 =null;

        ExprParser.optionDef_return optionDef2 =null;

        ExprParser.importDef_return importDef3 =null;

        ExprParser.messageDef_return messageDef4 =null;

        ExprParser.enumDef_return enumDef5 =null;


        Object Comment6_tree=null;
        RewriteRuleTokenStream stream_Comment=new RewriteRuleTokenStream(adaptor,"token Comment");
        RewriteRuleSubtreeStream stream_packageDef=new RewriteRuleSubtreeStream(adaptor,"rule packageDef");
        RewriteRuleSubtreeStream stream_enumDef=new RewriteRuleSubtreeStream(adaptor,"rule enumDef");
        RewriteRuleSubtreeStream stream_optionDef=new RewriteRuleSubtreeStream(adaptor,"rule optionDef");
        RewriteRuleSubtreeStream stream_importDef=new RewriteRuleSubtreeStream(adaptor,"rule importDef");
        RewriteRuleSubtreeStream stream_messageDef=new RewriteRuleSubtreeStream(adaptor,"rule messageDef");
        try {
            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:40:7: ( ( packageDef | optionDef | importDef | messageDef | enumDef | Comment )* -> ^( Proto ^( PackageList ( packageDef )* ) ^( OptionList ( optionDef )* ) ^( ImportList ( importDef )* ) ^( MessageList ( messageDef )* ) ^( EnumList ( enumDef )* ) ) )
            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:41:7: ( packageDef | optionDef | importDef | messageDef | enumDef | Comment )*
            {
            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:41:7: ( packageDef | optionDef | importDef | messageDef | enumDef | Comment )*
            loop1:
            do {
                int alt1=7;
                switch ( input.LA(1) ) {
                case Package:
                    {
                    alt1=1;
                    }
                    break;
                case Option:
                    {
                    alt1=2;
                    }
                    break;
                case Import:
                    {
                    alt1=3;
                    }
                    break;
                case Message:
                    {
                    alt1=4;
                    }
                    break;
                case Enum:
                    {
                    alt1=5;
                    }
                    break;
                case Comment:
                    {
                    alt1=6;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:41:8: packageDef
            	    {
            	    pushFollow(FOLLOW_packageDef_in_proto121);
            	    packageDef1=packageDef();

            	    state._fsp--;

            	    stream_packageDef.add(packageDef1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:41:19: optionDef
            	    {
            	    pushFollow(FOLLOW_optionDef_in_proto123);
            	    optionDef2=optionDef();

            	    state._fsp--;

            	    stream_optionDef.add(optionDef2.getTree());

            	    }
            	    break;
            	case 3 :
            	    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:41:29: importDef
            	    {
            	    pushFollow(FOLLOW_importDef_in_proto125);
            	    importDef3=importDef();

            	    state._fsp--;

            	    stream_importDef.add(importDef3.getTree());

            	    }
            	    break;
            	case 4 :
            	    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:41:39: messageDef
            	    {
            	    pushFollow(FOLLOW_messageDef_in_proto127);
            	    messageDef4=messageDef();

            	    state._fsp--;

            	    stream_messageDef.add(messageDef4.getTree());

            	    }
            	    break;
            	case 5 :
            	    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:41:50: enumDef
            	    {
            	    pushFollow(FOLLOW_enumDef_in_proto129);
            	    enumDef5=enumDef();

            	    state._fsp--;

            	    stream_enumDef.add(enumDef5.getTree());

            	    }
            	    break;
            	case 6 :
            	    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:41:58: Comment
            	    {
            	    Comment6=(Token)match(input,Comment,FOLLOW_Comment_in_proto131);  
            	    stream_Comment.add(Comment6);


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // AST REWRITE
            // elements: optionDef, importDef, enumDef, packageDef, messageDef
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 42:7: -> ^( Proto ^( PackageList ( packageDef )* ) ^( OptionList ( optionDef )* ) ^( ImportList ( importDef )* ) ^( MessageList ( messageDef )* ) ^( EnumList ( enumDef )* ) )
            {
                // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:43:7: ^( Proto ^( PackageList ( packageDef )* ) ^( OptionList ( optionDef )* ) ^( ImportList ( importDef )* ) ^( MessageList ( messageDef )* ) ^( EnumList ( enumDef )* ) )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(Proto, "Proto")
                , root_1);

                // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:43:15: ^( PackageList ( packageDef )* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(PackageList, "PackageList")
                , root_2);

                // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:43:29: ( packageDef )*
                while ( stream_packageDef.hasNext() ) {
                    adaptor.addChild(root_2, stream_packageDef.nextTree());

                }
                stream_packageDef.reset();

                adaptor.addChild(root_1, root_2);
                }

                // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:43:42: ^( OptionList ( optionDef )* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(OptionList, "OptionList")
                , root_2);

                // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:43:55: ( optionDef )*
                while ( stream_optionDef.hasNext() ) {
                    adaptor.addChild(root_2, stream_optionDef.nextTree());

                }
                stream_optionDef.reset();

                adaptor.addChild(root_1, root_2);
                }

                // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:43:67: ^( ImportList ( importDef )* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(ImportList, "ImportList")
                , root_2);

                // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:43:80: ( importDef )*
                while ( stream_importDef.hasNext() ) {
                    adaptor.addChild(root_2, stream_importDef.nextTree());

                }
                stream_importDef.reset();

                adaptor.addChild(root_1, root_2);
                }

                // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:43:92: ^( MessageList ( messageDef )* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(MessageList, "MessageList")
                , root_2);

                // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:43:106: ( messageDef )*
                while ( stream_messageDef.hasNext() ) {
                    adaptor.addChild(root_2, stream_messageDef.nextTree());

                }
                stream_messageDef.reset();

                adaptor.addChild(root_1, root_2);
                }

                // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:43:119: ^( EnumList ( enumDef )* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(EnumList, "EnumList")
                , root_2);

                // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:43:130: ( enumDef )*
                while ( stream_enumDef.hasNext() ) {
                    adaptor.addChild(root_2, stream_enumDef.nextTree());

                }
                stream_enumDef.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e)
        	{
        	    throw e;
        	}

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "proto"


    public static class classRef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "classRef"
    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:46:1: classRef[int type] : (id= Package |id= Option |id= Import |id= Message |id= Enum |id= Default |id= Identity |id= ClassPath ) ;
    public final ExprParser.classRef_return classRef(int type) throws RecognitionException {
        ExprParser.classRef_return retval = new ExprParser.classRef_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token id=null;

        Object id_tree=null;

        try {
            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:47:5: ( (id= Package |id= Option |id= Import |id= Message |id= Enum |id= Default |id= Identity |id= ClassPath ) )
            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:48:5: (id= Package |id= Option |id= Import |id= Message |id= Enum |id= Default |id= Identity |id= ClassPath )
            {
            root_0 = (Object)adaptor.nil();


            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:48:5: (id= Package |id= Option |id= Import |id= Message |id= Enum |id= Default |id= Identity |id= ClassPath )
            int alt2=8;
            switch ( input.LA(1) ) {
            case Package:
                {
                alt2=1;
                }
                break;
            case Option:
                {
                alt2=2;
                }
                break;
            case Import:
                {
                alt2=3;
                }
                break;
            case Message:
                {
                alt2=4;
                }
                break;
            case Enum:
                {
                alt2=5;
                }
                break;
            case Default:
                {
                alt2=6;
                }
                break;
            case Identity:
                {
                alt2=7;
                }
                break;
            case ClassPath:
                {
                alt2=8;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:48:6: id= Package
                    {
                    id=(Token)match(input,Package,FOLLOW_Package_in_classRef214); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;
                case 2 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:48:19: id= Option
                    {
                    id=(Token)match(input,Option,FOLLOW_Option_in_classRef220); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;
                case 3 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:48:31: id= Import
                    {
                    id=(Token)match(input,Import,FOLLOW_Import_in_classRef226); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;
                case 4 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:48:43: id= Message
                    {
                    id=(Token)match(input,Message,FOLLOW_Message_in_classRef232); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;
                case 5 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:48:56: id= Enum
                    {
                    id=(Token)match(input,Enum,FOLLOW_Enum_in_classRef238); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;
                case 6 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:48:66: id= Default
                    {
                    id=(Token)match(input,Default,FOLLOW_Default_in_classRef244); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;
                case 7 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:48:79: id= Identity
                    {
                    id=(Token)match(input,Identity,FOLLOW_Identity_in_classRef250); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;
                case 8 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:48:93: id= ClassPath
                    {
                    id=(Token)match(input,ClassPath,FOLLOW_ClassPath_in_classRef256); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;

            }


            id.setType(type);

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e)
        	{
        	    throw e;
        	}

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "classRef"


    public static class idDef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "idDef"
    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:52:1: idDef[int type] : (id= Package |id= Option |id= Import |id= Message |id= Enum |id= Default |id= Identity ) ;
    public final ExprParser.idDef_return idDef(int type) throws RecognitionException {
        ExprParser.idDef_return retval = new ExprParser.idDef_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token id=null;

        Object id_tree=null;

        try {
            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:53:5: ( (id= Package |id= Option |id= Import |id= Message |id= Enum |id= Default |id= Identity ) )
            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:54:5: (id= Package |id= Option |id= Import |id= Message |id= Enum |id= Default |id= Identity )
            {
            root_0 = (Object)adaptor.nil();


            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:54:5: (id= Package |id= Option |id= Import |id= Message |id= Enum |id= Default |id= Identity )
            int alt3=7;
            switch ( input.LA(1) ) {
            case Package:
                {
                alt3=1;
                }
                break;
            case Option:
                {
                alt3=2;
                }
                break;
            case Import:
                {
                alt3=3;
                }
                break;
            case Message:
                {
                alt3=4;
                }
                break;
            case Enum:
                {
                alt3=5;
                }
                break;
            case Default:
                {
                alt3=6;
                }
                break;
            case Identity:
                {
                alt3=7;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }

            switch (alt3) {
                case 1 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:54:6: id= Package
                    {
                    id=(Token)match(input,Package,FOLLOW_Package_in_idDef288); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;
                case 2 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:54:19: id= Option
                    {
                    id=(Token)match(input,Option,FOLLOW_Option_in_idDef294); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;
                case 3 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:54:31: id= Import
                    {
                    id=(Token)match(input,Import,FOLLOW_Import_in_idDef300); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;
                case 4 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:54:43: id= Message
                    {
                    id=(Token)match(input,Message,FOLLOW_Message_in_idDef306); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;
                case 5 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:54:56: id= Enum
                    {
                    id=(Token)match(input,Enum,FOLLOW_Enum_in_idDef312); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;
                case 6 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:54:66: id= Default
                    {
                    id=(Token)match(input,Default,FOLLOW_Default_in_idDef318); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;
                case 7 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:54:79: id= Identity
                    {
                    id=(Token)match(input,Identity,FOLLOW_Identity_in_idDef324); 
                    id_tree = 
                    (Object)adaptor.create(id)
                    ;
                    adaptor.addChild(root_0, id_tree);


                    }
                    break;

            }


            id.setType(type);

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e)
        	{
        	    throw e;
        	}

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "idDef"


    public static class packageDef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "packageDef"
    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:60:1: packageDef : Package val= classRef[ClassPath] ( Semicolon )? -> ^( $val) ;
    public final ExprParser.packageDef_return packageDef() throws RecognitionException {
        ExprParser.packageDef_return retval = new ExprParser.packageDef_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token Package7=null;
        Token Semicolon8=null;
        ExprParser.classRef_return val =null;


        Object Package7_tree=null;
        Object Semicolon8_tree=null;
        RewriteRuleTokenStream stream_Semicolon=new RewriteRuleTokenStream(adaptor,"token Semicolon");
        RewriteRuleTokenStream stream_Package=new RewriteRuleTokenStream(adaptor,"token Package");
        RewriteRuleSubtreeStream stream_classRef=new RewriteRuleSubtreeStream(adaptor,"rule classRef");
        try {
            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:60:13: ( Package val= classRef[ClassPath] ( Semicolon )? -> ^( $val) )
            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:61:13: Package val= classRef[ClassPath] ( Semicolon )?
            {
            Package7=(Token)match(input,Package,FOLLOW_Package_in_packageDef367);  
            stream_Package.add(Package7);


            pushFollow(FOLLOW_classRef_in_packageDef371);
            val=classRef(ClassPath);

            state._fsp--;

            stream_classRef.add(val.getTree());

            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:61:45: ( Semicolon )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==Semicolon) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:61:45: Semicolon
                    {
                    Semicolon8=(Token)match(input,Semicolon,FOLLOW_Semicolon_in_packageDef374);  
                    stream_Semicolon.add(Semicolon8);


                    }
                    break;

            }


            // AST REWRITE
            // elements: val
            // token labels: 
            // rule labels: val, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_val=new RewriteRuleSubtreeStream(adaptor,"rule val",val!=null?val.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 62:13: -> ^( $val)
            {
                // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:63:13: ^( $val)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_val.nextNode(), root_1);

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e)
        	{
        	    throw e;
        	}

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "packageDef"


    public static class optionDef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "optionDef"
    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:66:1: optionDef : Option val= idDef[Identity] Equals Quotation ( Semicolon )? -> ^( $val Quotation ) ;
    public final ExprParser.optionDef_return optionDef() throws RecognitionException {
        ExprParser.optionDef_return retval = new ExprParser.optionDef_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token Option9=null;
        Token Equals10=null;
        Token Quotation11=null;
        Token Semicolon12=null;
        ExprParser.idDef_return val =null;


        Object Option9_tree=null;
        Object Equals10_tree=null;
        Object Quotation11_tree=null;
        Object Semicolon12_tree=null;
        RewriteRuleTokenStream stream_Option=new RewriteRuleTokenStream(adaptor,"token Option");
        RewriteRuleTokenStream stream_Quotation=new RewriteRuleTokenStream(adaptor,"token Quotation");
        RewriteRuleTokenStream stream_Semicolon=new RewriteRuleTokenStream(adaptor,"token Semicolon");
        RewriteRuleTokenStream stream_Equals=new RewriteRuleTokenStream(adaptor,"token Equals");
        RewriteRuleSubtreeStream stream_idDef=new RewriteRuleSubtreeStream(adaptor,"rule idDef");
        try {
            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:66:13: ( Option val= idDef[Identity] Equals Quotation ( Semicolon )? -> ^( $val Quotation ) )
            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:67:13: Option val= idDef[Identity] Equals Quotation ( Semicolon )?
            {
            Option9=(Token)match(input,Option,FOLLOW_Option_in_optionDef443);  
            stream_Option.add(Option9);


            pushFollow(FOLLOW_idDef_in_optionDef447);
            val=idDef(Identity);

            state._fsp--;

            stream_idDef.add(val.getTree());

            Equals10=(Token)match(input,Equals,FOLLOW_Equals_in_optionDef450);  
            stream_Equals.add(Equals10);


            Quotation11=(Token)match(input,Quotation,FOLLOW_Quotation_in_optionDef452);  
            stream_Quotation.add(Quotation11);


            // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:67:57: ( Semicolon )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==Semicolon) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:67:57: Semicolon
                    {
                    Semicolon12=(Token)match(input,Semicolon,FOLLOW_Semicolon_in_optionDef454);  
                    stream_Semicolon.add(Semicolon12);


                    }
                    break;

            }


            // AST REWRITE
            // elements: Quotation, val
            // token labels: 
            // rule labels: val, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_val=new RewriteRuleSubtreeStream(adaptor,"rule val",val!=null?val.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 68:13: -> ^( $val Quotation )
            {
                // E:\\gitTest\\antlrAndProtobuf\\org\\chw\\proto\\Expr.g:69:13: ^( $val Quotation )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_val.nextNode(), root_1);

                adaptor.addChild(root_1, 
                stream_Quotation.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }

